Add some html stuff

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewpoint" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="https://github.com/nhatmicls/nhatmicls/blob/main/icon/github.svg" />
+    <title> Nhat Micls Github</title>
+</head>
+
+<body>
+    <h3>Hello World</h3>
+</body>
+
+</html>
