--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewpoint" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="https://github.com/nhatmicls/nhatmicls/blob/main/icon/github.svg" />
+    <link rel="icon" href="https://github.com/nhatmicls/nhatmicls.github.io/blob/master/icon/github.svg" />
     <title> Nhat Micls Github</title>
 </head>
 
