--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewpoint" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="https://github.com/nhatmicls/nhatmicls.github.io/blob/master/icon/github.svg" />
-    <title> Nhat Micls Github</title>
+    <title>Nhat Micls Github</title>
 </head>
 
 <body>
-    <h3>Hello World</h3>
+    <div>Hello World</div>
+    <img src="https://github.com/nhatmicls/nhatmicls.github.io/blob/master/image/main.png" />
 </body>
 
 </html>
