--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewpoint" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="https://github.com/nhatmicls/nhatmicls.github.io/blob/master/icon/github.svg" />
+    <link rel="icon" href="icon/github.svg" />
     <title>Nhat Micls Github</title>
 </head>
 
 <body>
     <div>Hello World</div>
-    <img src="https://github.com/nhatmicls/nhatmicls.github.io/blob/master/image/main.png" />
+    <img src="image/main.png" />
 </body>
 
 </html>
