--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewpoint" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="icon/github.svg" />
+    <link rel="icon" href="icon/triglavianCollective.png" />
     <title>Nhat Micls Github</title>
+
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body>
-    <div>Hello World</div>
+    <nav>
+        <ul id="navbar">
+            <li>
+                <a rel="internal">Home</a>
+            </li>
+            <li>
+                <a rel="internal">About</a>
+            </li>
+            <li>
+                <a rel="internal">Discord</a>
+            </li>
+            <li>
+                <a rel="internal">Login</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="welcome"></div>
 </body>
 
 </html>
