--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
     <title>Nhat Micls Github</title>
 
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/effect.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 </head>
 
 <body>
-    <nav>
-        <ul id="navbar">
-            <li>
-                <a rel="internal">Home</a>
-            </li>
-            <li>
-                <a rel="internal">About</a>
-            </li>
-            <li>
-                <a rel="internal">Discord</a>
-            </li>
-            <li>
-                <a rel="internal">Login</a>
-            </li>
-        </ul>
-    </nav>
+    <header id="header" class>
+        <div class>
+            <nav class="navbar-right">
+                <ul id="nav" class="navbar">
+                    <li class="menu-item">
+                        <a rel="internal">Home</a>
+                    </li>
+                    <li class="menu-item">
+                        <a rel="internal">About</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="https://github.com/nhatmicls" rel="internal">Github</a>
+                    </li>
+                    <li class="menu-item">
+                        <a rel="internal">Discord</a>
+                    </li>
+                    <li class="menu-item">
+                        <a rel="internal">Login</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div id="welcome"></div>
 </body>
 
