--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
                         <a rel="internal">Discord</a>
                     </li>
                     <li class="menu-item">
-                        <a rel="internal">Login</a>
+                        <a href="http://squidinc.space/" rel="internal">Login</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div id="welcome"></div>
+    <section id="Home"></section>
+    <section id="About"></section>
 </body>
 
 </html>
