--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <nav class="navbar-right">
                 <ul id="nav" class="navbar">
                     <li class="menu-item">
-                        <a rel="internal">Home</a>
+                        <a href="#Home" rel="internal">Home</a>
                     </li>
                     <li class="menu-item">
-                        <a rel="internal">About</a>
+                        <a href="#About" rel="internal">About</a>
                     </li>
                     <li class="menu-item">
                         <a href="https://github.com/nhatmicls" rel="internal">Github</a>
@@ -36,8 +36,16 @@
             </nav>
         </div>
     </header>
-    <section id="Home"></section>
-    <section id="About"></section>
+    <section id="Home" class="home" style="height: 1007px;">
+        <div>
+
+        </div>
+    </section>
+    <section id="About" class="about" style="height: 1007px;">
+        <div>
+
+        </div>
+    </section>
 </body>
 
 </html>
