--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="icon/triglavianCollective.png" />
     <title>Nhat Micls Github</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/effect.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
