--- a/index.html
+++ b/index.html
@@ -52,4 +52,13 @@
     </section>
 </body>
 
+<script language="javascript">
+    function autoResize() {
+        document.getElementById('Home').style.height = window.innerHeight + 'px';
+    }
+    window.onresize = autoResize;
+    autoResize();
+</script>
+
+
 </html>
